[project]
name = "fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.29",
    "celery>=5.6.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.3",
    "pillow>=12.2.0",
    "psycopg2>=2.9.12",
    "pyjwt>=2.13.0",
    "redis>=8.0.0",
    "ruff>=0.15.11",
    "sqlalchemy>=2.0.50",
]


[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E203"]
[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
]

[tool.pylint.messages_control]
disable = ["C0116", "E0401", "C0114", "C0115", "R0903"]

